# S5-HES-Agent

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SETUP_GUIDE.md
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: download_models.py  migrate_embeddings.py
backend/src/: __init__.py  main.py
backend/src/ai/: __init__.py
backend/src/ai/agents/: __init__.py  base_agent.py  device_manager_agent.py  home_builder_agent.py  optimization_agent.py  threat_injector_agent.py
backend/src/ai/llm/: __init__.py  base_client.py  conversation_manager.py  gemini_client.py  llm_engine.py  ollama_client.py  openai_client.py  provider_registry.py
backend/src/ai/mcp/: __init__.py  communication_hub.py
backend/src/ai/orchestrator/: __init__.py  orchestrator.py  task_decomposer.py
backend/src/ai/training/: __init__.py  environment.py  rl_trainer.py
backend/src/ai/verification/: __init__.py  physical_constraints.py  schema_validator.py  verification_pipeline.py
backend/src/api/: __init__.py  admin.py  agents.py  chat.py  experiments.py  exports.py  health.py  history.py  iot.py  llm.py  mode.py  monitoring.py  rag.py  review_queue.py  security_audit.py  simulation.py  sweeps.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/iot/: __init__.py
backend/src/iot/cloud/: __init__.py  cloud_adapters.py
backend/src/iot/edge/: __init__.py  edge_computing.py
backend/src/iot/protocols/: __init__.py  base_handler.py  coap_handler.py  http_handler.py  mqtt_handler.py  websocket_handler.py
backend/src/middleware/: __init__.py  mode_enforcement.py
backend/src/output/: __init__.py
backend/src/output/exporters/: __init__.py  export_wizard.py  ieee_figures.py  ieee_tables.py  jupyter_integration.py  plot_generator.py  publication_exporter.py
backend/src/output/research/: __init__.py  experiment_versioning.py  parameter_sweep.py  statistical_testing.py
backend/src/rag/: __init__.py  ingest_real_data.py  knowledge_base.py
backend/src/rag/adapters/: __init__.py  academic_adapter.py  device_spec_adapter.py  threat_intel_adapter.py
backend/src/rag/embeddings/: __init__.py  embedding_service.py
backend/src/rag/query/: __init__.py  hybrid_search.py  query_orchestrator.py
backend/src/rag/reasoning/: __init__.py  reasoning_engine.py
backend/src/security/: __init__.py  audit_service.py  auth_manager.py  code_review.py  encryption.py  engine.py  mesh_network.py  privacy.py  tls_manager.py
backend/src/simulation/: __init__.py  engine.py  models.py
backend/tests/: __init__.py  test_agents.py  test_api_home_validation.py  test_behavior.py  test_code_review.py  test_critical_fixes.py  test_health.py  test_home_builder_rag.py  test_mode.py  test_publication_exporter.py  test_rag.py  test_review_queue_api.py  test_security_audit.py  test_simulation.py  test_sprint7_rag.py  test_sprint7_scale.py  test_threats.py  test_zero_hallucination.py
backend/tests/e2e/: __init__.py  test_end_to_end.py  test_s6_features.py
backend/tests/integration/: __init__.py  test_device_protocol_integration.py
backend/tests/performance/: __init__.py  test_performance.py
frontend/: index.html  (+6 more)
(+86 files in other folders)
